# CandidAI-Advanced-AI-Engine

./: README.md  pyproject.toml  requirements.txt  structure.txt
backend/: main.py  nlp_utils.py  parsers.py  storage.py  summarizer.py
frontend/: app.py
