[project]
name = "CandidAI"
version = "0.1.0"
description = "AI-powered candidate screener"

requires-python = ">=3.9"

dependencies = [
    # Backend Framework
    "fastapi==0.115.0",
    "uvicorn==0.30.1",
    # NLP & Machine Learning
    "spacy==3.7.5",
    "sentence-transformers==3.0.1",
    # File Parsing
    "pdfplumber==0.11.0",
    "python-docx==1.1.2",
    # Data Handling
    "pandas==2.2.2",
    "numpy==1.26.4",
    # Storage
    "redis==5.0.8",
    # Frontend (MVP UI)
    "streamlit==1.38.0",
    # LLM-based Summarization
    "openai>=1.35.0",
    "python-dotenv>=1.1.1",
    "transformers>=4.56.0",
    "torch>=2.8.0",
    "python-multipart>=0.0.20",
    "xlsxwriter>=3.2.9",
    "matplotlib>=3.9.4",
    "scikit-learn>=1.6.1",
]

[tool.uv]
index-url = "https://pypi.org/simple"
